--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Frontend Mentor Challenge solution" />
-    <title>Frontend Mentor | Challenge Name</title>
+    <title>Frontend Mentor | FAQ Accordion</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="icon"
